# logibar

./: .gitignore  index.html  package-lock.json  package.json  settings.html  vite.config.ts
src/: main.ts  settings.css  settings.ts  shared.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/src/: config.rs  device_map.rs  lib.rs  main.rs  model.rs
src-tauri/src/hid/: client.rs  diag.rs  mod.rs  protocol.rs  receiver.rs  scanner.rs
