[package]
name = "logibar"
version = "0.1.0"
description = "Desktop widget showing battery level of Logitech peripherals"
authors = ["punneke"]
edition = "2021"

[lib]
name = "logibar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
