[package]
name = "logibar"
version = "0.1.0"
description = "Desktop widget showing battery level of Logitech peripherals"
authors = ["punneke"]
edition = "2021"

[lib]
name = "logibar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = { version = "2", features = ["windows-native"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-autostart = "2"
